Bug 1521583 - vertical alignment of grid.

--- a/content-src/components/DiscoveryStreamBase/_DiscoveryStreamBase.scss
+++ b/content-src/components/DiscoveryStreamBase/_DiscoveryStreamBase.scss
@@ -5,10 +5,12 @@
 
 .discovery-stream.ds-layout {
   $columns: 12;
+  --gridColumnGap: 48px;
+  --gridRowGap: var(--gridColumnGap);
   display: grid;
   grid-template-columns: repeat($columns, 1fr);
-  grid-column-gap: 48px;
-  grid-row-gap: 10px;
+  grid-column-gap: var(--gridColumnGap);
+  grid-row-gap: var(--gridRowGap);
   width: 936px;
   margin: 0 auto;
 
@@ -21,8 +23,8 @@
     $columns: $columns - 1;
   }
 
-  .ds-column {
+  .ds-column-grid {
     display: grid;
-    grid-row-gap: 10px;
+    grid-row-gap: var(--gridRowGap);
   }
 }
